--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -274,7 +274,7 @@
         // 관련 문서 모달 내부 Template
         function createModalContent() {
             return `<div class="related-instance-list">` +
-                `<input class="search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="search-count"></span>` +
+                `<input class="z-input search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="search-count"></span>` +
                 `<div class="table-set" id="instanceList"></div>` +
                 `</div>`;
         }
