--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -14,7 +14,7 @@
             <h6 class="description ml-2" th:text="#{user.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
-            <input class="search col-5 mr-2" id="search" type="text" maxlength="100"
+            <input class="z-input search col-5 mr-2" id="search" type="text" maxlength="100"
                    th:placeholder="#{user.label.searchPlaceholder}"/>
             <span id="spanTotalCount" class="search-count"></span>
             <div class="ml-auto">
