--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -14,7 +14,7 @@
             <h6 class="description ml-2" th:text="#{rule.msg.editDescription}"></h6>
         </div>
         <div class="header-search flex-row">
-            <input type="text" class="search col-5 mr-2" id="search" name="search" maxlength="100"
+            <input type="text" class="z-input search col-5 mr-2" id="search" name="search" maxlength="100"
                    th:placeholder="#{rule.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
@@ -35,7 +35,7 @@
                     <label th:text="#{rule.label.name}" class="required"></label>
                     <input type="hidden" id="txtRuleId" name="txtRuleId"/>
                     <input type="hidden" id="txtRuleNameOrg" name="txtRuleNameOrg"/>
-                    <input id="txtRuleName" name="txtRuleName" type="text" maxlength="100"/>
+                    <input type="text" class="z-input" id="txtRuleName" name="txtRuleName" maxlength="100"/>
                 </div>
                 <div class="edit-row flex-column">
                     <label th:text="#{rule.label.desc}"></label>
