--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -21,7 +21,7 @@
                     <span th:text="#{scheduler.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="taskName" required="required" maxlength="100"
+                <input type="text" class="z-input" id="taskName" required="required" maxlength="100"
                        th:value="${schedule?.taskName}"/>
             </div>
             <div class="flex-column edit-row">
@@ -62,14 +62,14 @@
                         <span th:text="#{scheduler.label.class}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="executeClass" required="required" maxlength="100"
+                    <input type="text" class="z-input" id="executeClass" required="required" maxlength="100"
                            th:value="${schedule?.executeClass}"/>
                 </div>
                 <div class="flex-column edit-row">
                     <label>
                         <span th:text="#{scheduler.label.args}"></span>
                     </label>
-                    <input type="text" id="args" maxlength="100" th:value="${schedule?.args}"/>
+                    <input type="text" class="z-input" id="args" maxlength="100" th:value="${schedule?.args}"/>
                 </div>
             </div>
             <!-- 타입: jar -->
@@ -79,14 +79,14 @@
                         <span th:text="#{scheduler.label.src}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="src" maxlength="250" required="required" th:value="${schedule?.src}"/>
+                    <input type="text" class="z-input" id="src" maxlength="250" required="required" th:value="${schedule?.src}"/>
                 </div>
                 <div class="flex-column edit-row">
                     <label>
                         <span th:text="#{scheduler.label.command}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="executeCommand" required="required" maxlength="500"
+                    <input type="text" class="z-input" id="executeCommand" required="required" maxlength="500"
                            th:value="${schedule?.executeCommand}"/>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <span th:text="#{scheduler.label.cronExpression}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="cronExpression" required="required" maxlength="100"
+                <input type="text" class="z-input" id="cronExpression" required="required" maxlength="100"
                        th:value="${schedule?.cronExpression}"/>
             </div>
             <div id="executeCycleType-fixed-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
@@ -127,7 +127,7 @@
                     <span th:text="#{scheduler.label.executeCyclePeriod}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="executeCyclePeriod" required="required" maxlength="6"
+                <input type="text" class="z-input" id="executeCyclePeriod" required="required" maxlength="6"
                        th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)"/>
             </div>
             <div class="flex-row justify-content-end edit-row">
