--- a/src/main/resources/public/template/scheduler/schedulerView.html
+++ b/src/main/resources/public/template/scheduler/schedulerView.html
@@ -21,7 +21,7 @@
                     <span th:text="#{scheduler.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="taskName" required="required" maxlength="100"
+                <input type="text" class="z-input" id="taskName" required="required" maxlength="100"
                        th:value="${schedule?.taskName}" disabled/>
             </div>
             <div class="flex-column edit-row">
@@ -62,14 +62,14 @@
                         <span th:text="#{scheduler.label.class}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="executeClass" required="required" maxlength="100"
+                    <input type="text" class="z-input" id="executeClass" required="required" maxlength="100"
                            th:value="${schedule?.executeClass}" disabled/>
                 </div>
                 <div class="flex-column edit-row">
                     <label>
                         <span th:text="#{scheduler.label.args}"></span>
                     </label>
-                    <input type="text" id="args" maxlength="100" th:value="${schedule?.args}" disabled/>
+                    <input type="text" class="z-input" id="args" maxlength="100" th:value="${schedule?.args}" disabled/>
                 </div>
             </div>
             <!-- 타입: query -->
@@ -101,7 +101,7 @@
                     <span th:text="#{scheduler.label.cronExpression}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="cronExpression" required="required" maxlength="100"
+                <input type="text" class="z-input" id="cronExpression" required="required" maxlength="100"
                        th:value="${schedule?.cronExpression}" disabled/>
             </div>
             <div id="executeCycleType-fixed-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
@@ -109,7 +109,7 @@
                     <span th:text="#{scheduler.label.executeCyclePeriod}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="executeCyclePeriod" required="required" maxlength="6"
+                <input type="text" class="z-input" id="executeCyclePeriod" required="required" maxlength="6"
                        th:value="${schedule?.executeCyclePeriod}" disabled/>
             </div>
             <div class="flex-row justify-content-end edit-row">
