--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -28,11 +28,10 @@
                 </select>
                 <input class="search col-3" type="text" name="searchValue" id="searchValue"
                        maxlength="100" th:placeholder="#{token.label.searchPlaceholder}"/>
-                <input type="text" id="searchFromDt" name="searchFromDt" class="search-date col-3"/>
-                <input type="text" id="toDt" name="toDt" class="search-date col-3"/>
-                <input type="hidden" id="searchToDt" name="searchToDt" class="search-date col-2"
-                       readonly="readonly"/>
-                <input class="search col-3 mr-2" type="text" name="searchTags" id="searchTags"
+                <input type="text" class="z-input search-date col-3" id="searchFromDt" name="searchFromDt"/>
+                <input type="text" class="z-input search-date col-3" id="toDt" name="toDt"/>
+                <input type="hidden" class="search-date col-2" id="searchToDt" name="searchToDt" readonly="readonly"/>
+                <input  type="text" class="z-input search col-3 mr-2" id="searchTags" name="searchTags"
                        maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
