--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -151,7 +151,8 @@
   .#{$common-prefix}component-label {
     flex-basis: getFlexBasis(100%, 0px, $column-row, 0px);
     padding: 0.4375rem 0.938rem 0.4375rem 0; // 7px 15px 7px 0
-    &.on { display: block; }
+
+    &.on { display: flex; }
     &.off { display: none; }
   }
   // element
@@ -203,16 +204,8 @@
 
     // Custom-code 컴포넌트
     .#{$common-prefix}input-button {
-      width: 100%;
-      .input {
-        width: 80%;
-      }
-      .button {
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        word-wrap: normal;
-        width: 20%;
-        overflow: hidden;
+      .#{$common-prefix}button-search {
+        padding: 0.625rem; // 10px
       }
     }
 
