--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1843,7 +1843,6 @@ label {
 }
 .z-input-button {
   position: relative;
-  display: inherit;
   height: 2.25rem;
 }
 .z-input-button input[type=text] {
@@ -1882,13 +1881,11 @@ label {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.2;
-  color: #212121;
-  background-color: #FFFFFF;
+  color: #212121 !important;
+  background-color: #FFFFFF !important;
   border: 0.0625rem solid #CFD5D9;
-  border-radius: 0.125rem;
-  -webkit-border-radius: 0.125rem;
-  -moz-border-radius: 0.125rem;
-  padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+  border-radius: 0.125rem !important;
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem !important;
   resize: vertical;
 }
 .z-textarea::placeholder {
@@ -5246,7 +5243,7 @@ body.modal-active {
   flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0;
 }
-.z-component .z-element .input {
+.z-component .z-element .input, .z-component .z-element .z-input {
   width: 100%;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
@@ -5502,7 +5499,7 @@ body.modal-active {
   flex-direction: row;
   justify-content: space-between;
 }
-.property .box-model .input {
+.property .box-model .z-input {
   width: 4.375rem;
 }
 .property .clipboard {
@@ -5510,21 +5507,21 @@ body.modal-active {
   flex-direction: row;
   justify-content: space-between;
 }
-.property .clipboard .input {
+.property .clipboard .z-input {
   width: 100%;
 }
-.property .input {
+.property .z-input {
   width: 100%;
   padding: 0 1rem;
   font-size: 0.875rem;
   vertical-align: middle;
 }
-.property .input.icon-unit-search {
+.property .z-input.icon-unit-search {
   background: url("../media/icons/formDesigner/unit/icon_unit_search.svg") no-repeat 97% 50%;
   background-color: #FFFFFF;
   padding-right: 1.875rem;
 }
-.property .input.icon-unit-px {
+.property .z-input.icon-unit-px {
   background: url("../media/icons/formDesigner/unit/icon_unit_px.svg") no-repeat 97% 50%;
   background-color: #FFFFFF;
   padding-right: 1.875rem;
@@ -5548,10 +5545,16 @@ body.modal-active {
 .property .slider .range:not(:disabled):hover, .property .slider .range:not(:read-only):hover {
   background: #0098FF;
 }
-.property .slider .input {
+.property .slider .z-input {
   width: 23%;
   text-align: center;
   margin-left: 2%;
+}
+.property .slider .z-input:read-only {
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
 }
 .property .select {
   width: 100%;
@@ -5563,11 +5566,11 @@ body.modal-active {
 .property .default-type .btn-switch {
   width: 3.75rem;
 }
-.property .default-type .input {
+.property .default-type .z-input {
   display: block;
   margin-left: 0.625rem;
 }
-.property .default-type .input.off {
+.property .default-type .z-input.off {
   display: none;
 }
 .property .default-type .select {
@@ -5593,7 +5596,7 @@ body.modal-active {
   flex-wrap: wrap;
   margin: 0.3125rem 0;
 }
-.property .default-type-radio .radio-property-group .radio-item .input {
+.property .default-type-radio .radio-property-group .radio-item .z-input {
   width: 2.813rem;
   margin: 0 0.3125rem 0 0;
 }
