--- a/src/main/resources/public/template/workflow/workFlowEditModal.html
+++ b/src/main/resources/public/template/workflow/workFlowEditModal.html
@@ -99,8 +99,9 @@
             <!-- 신청서 아이콘 -->
             <div id="document-icon-content" class="document-icon-content" th:classappend="${documentData?.documentType != 'workflow'} ? 'on'">
                 <label class="field-label" for="document-icon" th:text="#{document.label.icon}"></label>
-                <div class="flex-row input-button">
-                    <input type="text" id="document-icon" class="z-input col-5" th:value="${documentData?.documentIcon}" readonly />
+                <div class="flex-row z-input-button">
+                    <input type="text" id="document-icon" class="z-input col-pct-11" th:value="${documentData?.documentIcon}" readonly />
+                    <button class="z-button-clear" name="clearIcon" type="button" onclick="aliceJs.clearText(this);"  tabindex="-1"></button>
                     <button type="button" class="default-line" th:text="#{common.btn.select}" th:onclick="openIcon();"></button>
                 </div>
             </div>
