#10886 Input Box, Text Area 디자인 적용 - 기본 레이아웃
- custom code 컴포넌트 z-clear-button 수정

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1751,7 +1751,6 @@ label {
   margin: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
 }
 .input-button input[type=text]:focus, .input-button input[type=text]:hover {
   z-index: 25;
@@ -2012,6 +2011,11 @@ label {
 
 .timepicker {
   background: #FFFFFF url("../media/icons/icon_clock.svg") no-repeat 98% 50%;
+}
+
+.z-input-button .z-button-clear {
+  position: absolute;
+  right: calc(0rem + 2.625rem);
 }
 
 /* _buttons.scss 
