--- a/src/main/resources/public/scss/formDesigner/_elements.scss
+++ b/src/main/resources/public/scss/formDesigner/_elements.scss
@@ -88,3 +88,10 @@
 .timepicker {
   background: $white url("#{$icon-folder-path}icon_clock.svg") no-repeat 98% 50%;
 }
+
+// input + button for custom code
+.#{$common-prefix}input-button {
+  .#{$common-prefix}button-clear {
+    @include absolute($right: calc(#{$input-clear-right} + 2.625rem));
+  }
+}
